testclasses, deleted some bad testclasses that dont follow the oppgavebeskrivelse