@@ -1,51 +1,87 @@
 package edu.ntnu.boardgame.io;
 
-import edu.ntnu.boardgame.constructors.Player;
-import edu.ntnu.boardgame.constructors.Tile;
-import org.junit.jupiter.api.Test;
-
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
+import java.io.FileReader;
+import java.io.FileWriter;
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import org.junit.jupiter.api.Test;
+import org.mockito.MockedConstruction;
+import static org.mockito.Mockito.mockConstruction;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
-class PlayerFileHandlerTest {
+import edu.ntnu.boardgame.constructors.Player;
+import edu.ntnu.boardgame.constructors.Tile;
 
-    @Test
-    void testReadFromCSV() throws Exception {
-        File testFile = new File("src/test/resources/players_test.csv");
-        List<Player> players = PlayerFileHandler.readFromCSV(testFile);
+/**
+ * Unit tests for {@link PlayerFileHandler} using mocked I/O.
+ */
+public class PlayerFileHandlerTest {
 
-        assertEquals(4, players.size(), "Skal lese 4 spillere fra CSV");
-
-        assertEquals("Arne", players.get(0).getName());
-        assertEquals("TopHat", players.get(0).getToken());
-
-        assertEquals("Atle", players.get(3).getName());
-        assertEquals("Thimble", players.get(3).getToken());
-    }
-
+    /**
+     * Tests that writeToCSV creates and uses a BufferedWriter without error.
+     */
     @Test
     void testWriteToCSV() throws Exception {
-        File tempFile = new File("src/test/resources/temp_output.csv");
+        Player player = new Player("Abdi", new Tile(1), 22);
+        player.setToken("X");
 
-        // 1. Lager en liste med spillere
-        List<Player> originalPlayers = List.of(
-                new Player("Test1", new Tile(1), 10), //tile kan ikke være null så vi bare lager en dummytile rn
-                new Player("Test2", new Tile(1), 10) //tile kan ikke være null så vi bare lager en dummytile rn
-        );
-        originalPlayers.get(0).setToken("Icon1");
-        originalPlayers.get(1).setToken("Icon2");
+        List<Player> players = Arrays.asList(player);
+        File dummyFile = new File("dummy.csv");
 
-        // 2. Skriver spillerne til en midlertidig CSV-fil
-        PlayerFileHandler.writeToCSV(tempFile, originalPlayers);
+        try (MockedConstruction<FileWriter> mockedWriter = mockConstruction(FileWriter.class); MockedConstruction<BufferedWriter> mockedBuffered = mockConstruction(BufferedWriter.class)) {
 
-        // 3. Leser spillerne tilbake fra filen
-        List<Player> loadedPlayers = PlayerFileHandler.readFromCSV(tempFile);
+            assertDoesNotThrow(() -> PlayerFileHandler.writeToCSV(dummyFile, players));
 
-        // 4. Sjekker at dataen ble skrevet og lest korrekt
-        assertEquals(2, loadedPlayers.size());
-        assertEquals("Test1", loadedPlayers.get(0).getName());
-        assertEquals("Icon1", loadedPlayers.get(0).getToken());
+            // Bekreft at BufferedWriter ble brukt
+            BufferedWriter writer = mockedBuffered.constructed().get(0);
+            verify(writer).write("Abdi,22,X");
+            verify(writer).newLine();
+        }
     }
+
+    /**
+     * Tests that readFromCSV reads player data from mocked BufferedReader.
+     */
+    @Test
+    void testReadFromCSV() throws Exception {
+        String csvLine = "Layla,20,O";
+
+        try (MockedConstruction<FileReader> mockedReader = mockConstruction(FileReader.class); MockedConstruction<BufferedReader> mockedBuffered = mockConstruction(BufferedReader.class,
+                (mock, context) -> when(mock.readLine())
+                        .thenReturn(csvLine)
+                        .thenReturn(null))) {
+
+            File dummyFile = new File("fake.csv");
+            List<Player> players = PlayerFileHandler.readFromCSV(dummyFile);
+
+            assertEquals(1, players.size());
+            assertEquals("Layla", players.get(0).getName());
+            assertEquals(20, players.get(0).getAge());
+            assertEquals("O", players.get(0).getToken());
+        }
+    }
+
+    /**
+     * Tests that writeToJSON runs without error and uses FileWriter.
+     */
+    @Test
+    void testWriteToJSON() throws Exception {
+        Player player = new Player("Fatima", new Tile(1), 25);
+        player.setToken("Z");
+
+        List<Player> players = Arrays.asList(player);
+        File dummyFile = new File("dummy.json");
+
+        try (MockedConstruction<FileWriter> mocked = mockConstruction(FileWriter.class)) {
+            assertDoesNotThrow(() -> PlayerFileHandler.writeToJSON(dummyFile, players));
+        }
+    }
+
 }
